// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should not render zero badge when show-zero-badge prop is false 1`] = `
<ForwardRef
  active={0}
  duration={300}
  ellipsis={true}
  lazyRender={true}
  offsetTop={0}
  swipeThreshold={5}
  type="line"
>
  <div
    className="rc-tabs rc-tabs--line"
  >
    <div
      className="rc-tabs__wrap"
    >
      <div
        className="rc-tabs__nav rc-tabs__nav--line"
        role="tablist"
        style={
          Object {
            "background": undefined,
            "borderColor": undefined,
          }
        }
      >
        <ForwardRef
          badge={0}
          isActive={true}
          key=".0"
          onClick={[Function]}
          scrollable={false}
          showZeroBadge={true}
          type="line"
        >
          <div
            aria-selected={true}
            className="rc-tab rc-tab--active"
            onClick={[Function]}
            style={Object {}}
          >
            <Badge
              content={0}
              showZero={true}
              tag="div"
            >
              <div
                className="rc-badge__wrapper"
              >
                <span
                  className="rc-tab__text rc-tab__text--ellipsis"
                />
                <div
                  className="rc-badge rc-badge--fixed"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                >
                  0
                </div>
              </div>
            </Badge>
          </div>
        </ForwardRef>
        <ForwardRef
          badge={0}
          isActive={false}
          key=".1"
          onClick={[Function]}
          scrollable={false}
          showZeroBadge={false}
          type="line"
        >
          <div
            aria-selected={false}
            className="rc-tab"
            onClick={[Function]}
            style={Object {}}
          >
            <Badge
              content={0}
              showZero={false}
              tag="div"
            >
              <div
                className="rc-badge__wrapper"
              >
                <span
                  className="rc-tab__text rc-tab__text--ellipsis"
                />
              </div>
            </Badge>
          </div>
        </ForwardRef>
        <div
          className="rc-tabs__line"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        />
      </div>
    </div>
    <TabsContent
      count={2}
      currentIndex={0}
      duration={300}
      inited={true}
      lazyRender={true}
      onChange={[Function]}
    >
      <div
        className="rc-tabs__content"
      >
        <ForwardRef
          badge={0}
          index={0}
          key=".0"
          showZeroBadge={true}
        >
          <div
            className="rc-tab__pane"
            role="tabpanel"
            style={
              Object {
                "display": "block",
              }
            }
          >
            1
          </div>
        </ForwardRef>
        <ForwardRef
          badge={0}
          index={1}
          key=".1"
          showZeroBadge={false}
        >
          <div
            className="rc-tab__pane"
            role="tabpanel"
            style={
              Object {
                "display": "none",
              }
            }
          />
        </ForwardRef>
      </div>
    </TabsContent>
  </div>
</ForwardRef>
`;

exports[`Tabs should render card type correctly 1`] = `
<ForwardRef
  active={0}
  color="#ff0000"
  duration={300}
  ellipsis={true}
  lazyRender={true}
  offsetTop={0}
  swipeThreshold={5}
  type="card"
>
  <div
    className="rc-tabs rc-tabs--card"
  >
    <div
      className="rc-tabs__wrap"
    >
      <div
        className="rc-tabs__nav rc-tabs__nav--card"
        role="tablist"
        style={
          Object {
            "background": undefined,
            "borderColor": "#ff0000",
          }
        }
      >
        <ForwardRef
          badge={1}
          color="#ff0000"
          isActive={true}
          key=".0"
          onClick={[Function]}
          scrollable={false}
          showZeroBadge={true}
          type="card"
        >
          <div
            aria-selected={true}
            className="rc-tab rc-tab--active"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#ff0000",
                "borderColor": "#ff0000",
              }
            }
          >
            <Badge
              content={1}
              showZero={true}
              tag="div"
            >
              <div
                className="rc-badge__wrapper"
              >
                <span
                  className="rc-tab__text rc-tab__text--ellipsis"
                />
                <div
                  className="rc-badge rc-badge--fixed"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                >
                  1
                </div>
              </div>
            </Badge>
          </div>
        </ForwardRef>
        <ForwardRef
          color="#ff0000"
          dot={true}
          isActive={false}
          key=".1"
          onClick={[Function]}
          scrollable={false}
          showZeroBadge={true}
          type="card"
        >
          <div
            aria-selected={false}
            className="rc-tab"
            onClick={[Function]}
            style={
              Object {
                "borderColor": "#ff0000",
                "color": "#ff0000",
              }
            }
          >
            <Badge
              dot={true}
              showZero={true}
              tag="div"
            >
              <div
                className="rc-badge__wrapper"
              >
                <span
                  className="rc-tab__text rc-tab__text--ellipsis"
                />
                <div
                  className="rc-badge rc-badge--dot rc-badge--fixed"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                />
              </div>
            </Badge>
          </div>
        </ForwardRef>
        <ForwardRef
          color="#ff0000"
          isActive={false}
          key=".2"
          onClick={[Function]}
          renderTitle={
            <h3>
              haha
            </h3>
          }
          scrollable={false}
          showZeroBadge={true}
          type="card"
        >
          <div
            aria-selected={false}
            className="rc-tab"
            onClick={[Function]}
            style={
              Object {
                "borderColor": "#ff0000",
                "color": "#ff0000",
              }
            }
          >
            <span
              className="rc-tab__text rc-tab__text--ellipsis"
            >
              <h3>
                haha
              </h3>
            </span>
          </div>
        </ForwardRef>
        <ForwardRef
          color="#ff0000"
          isActive={false}
          key=".3"
          onClick={[Function]}
          renderTitle={[Function]}
          scrollable={false}
          showZeroBadge={true}
          type="card"
        >
          <div
            aria-selected={false}
            className="rc-tab"
            onClick={[Function]}
            style={
              Object {
                "borderColor": "#ff0000",
                "color": "#ff0000",
              }
            }
          >
            <span
              className="rc-tab__text rc-tab__text--ellipsis"
            >
              <h3>
                false
              </h3>
            </span>
          </div>
        </ForwardRef>
      </div>
    </div>
    <TabsContent
      count={4}
      currentIndex={0}
      duration={300}
      inited={true}
      lazyRender={true}
      onChange={[Function]}
    >
      <div
        className="rc-tabs__content"
      >
        <ForwardRef
          badge={1}
          index={0}
          key=".0"
          showZeroBadge={true}
        >
          <div
            className="rc-tab__pane"
            role="tabpanel"
            style={
              Object {
                "display": "block",
              }
            }
          >
            1
          </div>
        </ForwardRef>
        <ForwardRef
          dot={true}
          index={1}
          key=".1"
          showZeroBadge={true}
        >
          <div
            className="rc-tab__pane"
            role="tabpanel"
            style={
              Object {
                "display": "none",
              }
            }
          />
        </ForwardRef>
        <ForwardRef
          index={2}
          key=".2"
          renderTitle={
            <h3>
              haha
            </h3>
          }
          showZeroBadge={true}
        >
          <div
            className="rc-tab__pane"
            role="tabpanel"
            style={
              Object {
                "display": "none",
              }
            }
          />
        </ForwardRef>
        <ForwardRef
          index={3}
          key=".3"
          renderTitle={[Function]}
          showZeroBadge={true}
        >
          <div
            className="rc-tab__pane"
            role="tabpanel"
            style={
              Object {
                "display": "none",
              }
            }
          />
        </ForwardRef>
      </div>
    </TabsContent>
  </div>
</ForwardRef>
`;

exports[`Tabs should render correctly when lazy-render 1`] = `
<div
  className="rc-tabs__content"
>
  <ForwardRef
    index={0}
    key=".0"
    name="a"
    showZeroBadge={true}
    title="title1"
  >
    <div
      className="rc-tab__pane"
      role="tabpanel"
      style={
        Object {
          "display": "block",
        }
      }
    >
      Tab
    </div>
  </ForwardRef>
  <ForwardRef
    index={1}
    key=".1"
    name="b"
    showZeroBadge={true}
    title="title2"
  >
    <div
      className="rc-tab__pane"
      role="tabpanel"
      style={
        Object {
          "display": "none",
        }
      }
    />
  </ForwardRef>
</div>
`;

exports[`Tabs should render correctly when lazy-render 2`] = `
<div
  className="rc-tabs__content"
>
  <ForwardRef
    index={0}
    key=".0"
    name="a"
    showZeroBadge={true}
    title="title1"
  >
    <div
      className="rc-tab__pane"
      role="tabpanel"
      style={
        Object {
          "display": "block",
        }
      }
    >
      Tab
    </div>
  </ForwardRef>
  <ForwardRef
    index={1}
    key=".1"
    name="b"
    showZeroBadge={true}
    title="title2"
  >
    <div
      className="rc-tab__pane"
      role="tabpanel"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Tab
    </div>
  </ForwardRef>
</div>
`;

exports[`Tabs should render correctly when set scrollspy prop 1`] = `
<div
  className="test-rab"
>
  <ForwardRef
    active={0}
    duration={300}
    ellipsis={true}
    lazyRender={true}
    offsetTop={0}
    onChange={[MockFunction]}
    scrollspy={
      Object {
        "autoFocusLast": true,
        "reachBottomThreshold": 50,
      }
    }
    sticky={true}
    swipeThreshold={5}
    type="line"
  >
    <div
      className="rc-tabs rc-tabs--line"
    >
      <Sticky
        container={
          Object {
            "current": <div
              class="rc-tabs rc-tabs--line"
            >
              <div>
                <div
                  class="rc-sticky"
                >
                  <div
                    class="rc-tabs__wrap"
                  >
                    <div
                      class="rc-tabs__nav rc-tabs__nav--line"
                      role="tablist"
                    >
                      <div
                        aria-selected="true"
                        class="rc-tab rc-tab--active"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title0
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="rc-tab"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title1
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="rc-tab"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title2
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="rc-tab"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title3
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="rc-tab"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title4
                        </span>
                      </div>
                      <div
                        class="rc-tabs__line"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rc-tabs__content"
              >
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    0
                  </div>
                </div>
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    1
                  </div>
                </div>
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    2
                  </div>
                </div>
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    3
                  </div>
                </div>
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    4
                  </div>
                </div>
              </div>
            </div>,
          }
        }
        offsetBottom={0}
        offsetTop={0}
        onChange={[Function]}
        onScroll={[Function]}
        position="top"
      >
        <div
          style={null}
        >
          <div
            className="rc-sticky"
            style={null}
          >
            <div
              className="rc-tabs__wrap"
            >
              <div
                className="rc-tabs__nav rc-tabs__nav--line"
                role="tablist"
                style={
                  Object {
                    "background": undefined,
                    "borderColor": undefined,
                  }
                }
              >
                <ForwardRef
                  isActive={true}
                  key=".$0"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title0"
                  type="line"
                >
                  <div
                    aria-selected={true}
                    className="rc-tab rc-tab--active"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title0
                    </span>
                  </div>
                </ForwardRef>
                <ForwardRef
                  isActive={false}
                  key=".$1"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title1"
                  type="line"
                >
                  <div
                    aria-selected={false}
                    className="rc-tab"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title1
                    </span>
                  </div>
                </ForwardRef>
                <ForwardRef
                  isActive={false}
                  key=".$2"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title2"
                  type="line"
                >
                  <div
                    aria-selected={false}
                    className="rc-tab"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title2
                    </span>
                  </div>
                </ForwardRef>
                <ForwardRef
                  isActive={false}
                  key=".$3"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title3"
                  type="line"
                >
                  <div
                    aria-selected={false}
                    className="rc-tab"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title3
                    </span>
                  </div>
                </ForwardRef>
                <ForwardRef
                  isActive={false}
                  key=".$4"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title4"
                  type="line"
                >
                  <div
                    aria-selected={false}
                    className="rc-tab"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title4
                    </span>
                  </div>
                </ForwardRef>
                <div
                  className="rc-tabs__line"
                  style={
                    Object {
                      "backgroundColor": undefined,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </Sticky>
      <TabsContent
        count={5}
        currentIndex={0}
        duration={300}
        inited={true}
        lazyRender={true}
        onChange={[Function]}
      >
        <div
          className="rc-tabs__content"
        >
          <ForwardRef
            index={0}
            key=".$0"
            showZeroBadge={true}
            title="title0"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                0
              </div>
            </div>
          </ForwardRef>
          <ForwardRef
            index={1}
            key=".$1"
            showZeroBadge={true}
            title="title1"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                1
              </div>
            </div>
          </ForwardRef>
          <ForwardRef
            index={2}
            key=".$2"
            showZeroBadge={true}
            title="title2"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                2
              </div>
            </div>
          </ForwardRef>
          <ForwardRef
            index={3}
            key=".$3"
            showZeroBadge={true}
            title="title3"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                3
              </div>
            </div>
          </ForwardRef>
          <ForwardRef
            index={4}
            key=".$4"
            showZeroBadge={true}
            title="title4"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                4
              </div>
            </div>
          </ForwardRef>
        </div>
      </TabsContent>
    </div>
  </ForwardRef>
</div>
`;

exports[`Tabs should render correctly when set scrollspy prop 2`] = `
<div
  className="test-rab"
>
  <ForwardRef
    active={0}
    duration={300}
    ellipsis={true}
    lazyRender={true}
    offsetTop={0}
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            2,
            "title2",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    scrollspy={
      Object {
        "autoFocusLast": true,
        "reachBottomThreshold": 50,
      }
    }
    sticky={true}
    swipeThreshold={5}
    type="line"
  >
    <div
      className="rc-tabs rc-tabs--line"
    >
      <Sticky
        container={
          Object {
            "current": <div
              class="rc-tabs rc-tabs--line"
            >
              <div>
                <div
                  class="rc-sticky"
                >
                  <div
                    class="rc-tabs__wrap"
                  >
                    <div
                      class="rc-tabs__nav rc-tabs__nav--line"
                      role="tablist"
                    >
                      <div
                        aria-selected="false"
                        class="rc-tab"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title0
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="rc-tab"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title1
                        </span>
                      </div>
                      <div
                        aria-selected="true"
                        class="rc-tab rc-tab--active"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title2
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="rc-tab"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title3
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="rc-tab"
                      >
                        <span
                          class="rc-tab__text rc-tab__text--ellipsis"
                        >
                          title4
                        </span>
                      </div>
                      <div
                        class="rc-tabs__line"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rc-tabs__content"
              >
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    0
                  </div>
                </div>
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    1
                  </div>
                </div>
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    2
                  </div>
                </div>
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    3
                  </div>
                </div>
                <div
                  class="rc-tab__pane"
                  role="tabpanel"
                  style="display: block;"
                >
                  <div
                    style="height: 80px;"
                  >
                    内容 
                    4
                  </div>
                </div>
              </div>
            </div>,
          }
        }
        offsetBottom={0}
        offsetTop={0}
        onChange={[Function]}
        onScroll={[Function]}
        position="top"
      >
        <div
          style={null}
        >
          <div
            className="rc-sticky"
            style={null}
          >
            <div
              className="rc-tabs__wrap"
            >
              <div
                className="rc-tabs__nav rc-tabs__nav--line"
                role="tablist"
                style={
                  Object {
                    "background": undefined,
                    "borderColor": undefined,
                  }
                }
              >
                <ForwardRef
                  isActive={false}
                  key=".$0"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title0"
                  type="line"
                >
                  <div
                    aria-selected={false}
                    className="rc-tab"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title0
                    </span>
                  </div>
                </ForwardRef>
                <ForwardRef
                  isActive={false}
                  key=".$1"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title1"
                  type="line"
                >
                  <div
                    aria-selected={false}
                    className="rc-tab"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title1
                    </span>
                  </div>
                </ForwardRef>
                <ForwardRef
                  isActive={true}
                  key=".$2"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title2"
                  type="line"
                >
                  <div
                    aria-selected={true}
                    className="rc-tab rc-tab--active"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title2
                    </span>
                  </div>
                </ForwardRef>
                <ForwardRef
                  isActive={false}
                  key=".$3"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title3"
                  type="line"
                >
                  <div
                    aria-selected={false}
                    className="rc-tab"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title3
                    </span>
                  </div>
                </ForwardRef>
                <ForwardRef
                  isActive={false}
                  key=".$4"
                  onClick={[Function]}
                  scrollable={false}
                  showZeroBadge={true}
                  title="title4"
                  type="line"
                >
                  <div
                    aria-selected={false}
                    className="rc-tab"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="rc-tab__text rc-tab__text--ellipsis"
                    >
                      title4
                    </span>
                  </div>
                </ForwardRef>
                <div
                  className="rc-tabs__line"
                  style={
                    Object {
                      "backgroundColor": undefined,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </Sticky>
      <TabsContent
        count={5}
        currentIndex={2}
        duration={300}
        inited={true}
        lazyRender={true}
        onChange={[Function]}
      >
        <div
          className="rc-tabs__content"
        >
          <ForwardRef
            index={0}
            key=".$0"
            showZeroBadge={true}
            title="title0"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                0
              </div>
            </div>
          </ForwardRef>
          <ForwardRef
            index={1}
            key=".$1"
            showZeroBadge={true}
            title="title1"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                1
              </div>
            </div>
          </ForwardRef>
          <ForwardRef
            index={2}
            key=".$2"
            showZeroBadge={true}
            title="title2"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                2
              </div>
            </div>
          </ForwardRef>
          <ForwardRef
            index={3}
            key=".$3"
            showZeroBadge={true}
            title="title3"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                3
              </div>
            </div>
          </ForwardRef>
          <ForwardRef
            index={4}
            key=".$4"
            showZeroBadge={true}
            title="title4"
          >
            <div
              className="rc-tab__pane"
              role="tabpanel"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "80px",
                  }
                }
              >
                内容 
                4
              </div>
            </div>
          </ForwardRef>
        </div>
      </TabsContent>
    </div>
  </ForwardRef>
</div>
`;

exports[`Tabs test with testing library should render correctly after inserting a tab 1`] = `
<div>
  <div
    class="rc-tabs rc-tabs--line"
  >
    <div>
      <div
        class="rc-sticky"
      >
        <div
          class="rc-tabs__wrap"
        >
          <div
            class="rc-tabs__nav rc-tabs__nav--line"
            role="tablist"
          >
            <div
              aria-selected="true"
              class="rc-tab rc-tab--active"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                title1
              </span>
            </div>
            <div
              aria-selected="false"
              class="rc-tab"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                title3
              </span>
            </div>
            <div
              class="rc-tabs__line"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs__content"
    >
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        Tab
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        Tab
      </div>
    </div>
  </div>
  <button
    data-testid="button-change"
    type="button"
  >
    ChangeInsert
  </button>
</div>
`;

exports[`Tabs test with testing library should render correctly after inserting a tab 2`] = `
<div>
  <div
    class="rc-tabs rc-tabs--line"
  >
    <div>
      <div
        class="rc-sticky"
      >
        <div
          class="rc-tabs__wrap"
        >
          <div
            class="rc-tabs__nav rc-tabs__nav--line"
            role="tablist"
          >
            <div
              aria-selected="true"
              class="rc-tab rc-tab--active"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                title1
              </span>
            </div>
            <div
              aria-selected="false"
              class="rc-tab"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              />
            </div>
            <div
              aria-selected="false"
              class="rc-tab"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                title3
              </span>
            </div>
            <div
              class="rc-tabs__line"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs__content"
    >
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        Tab
      </div>
      <div
        index="1"
      >
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          Tab
        </div>
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        Tab
      </div>
    </div>
  </div>
  <button
    data-testid="button-change"
    type="button"
  >
    ChangeInsert
  </button>
</div>
`;

exports[`Tabs test with testing library should render correctly when set sticky prop 1`] = `
<div>
  <div
    class="rc-tabs rc-tabs--line"
  >
    <div>
      <div
        class="rc-sticky"
      >
        <div
          class="rc-tabs__wrap"
        >
          <div
            class="rc-tabs__nav rc-tabs__nav--line"
            role="tablist"
          >
            <div
              aria-selected="false"
              class="rc-tab"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                1
              </span>
            </div>
            <div
              aria-selected="false"
              class="rc-tab rc-tab--disabled"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                2
              </span>
            </div>
            <div
              aria-selected="true"
              class="rc-tab rc-tab--active"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                3
              </span>
            </div>
            <div
              class="rc-tabs__line"
              style="transform: translateX(0px) translateX(-50%); transition-duration: 300ms; height: 5px; border-radius: 5px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs__content"
    >
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        content1
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        content2
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        content3
      </div>
    </div>
  </div>
</div>
`;
